@@ -111,8 +111,8 @@ does not fork.
 .B -m
 selects the output mode (report mode). Currently, 0 means the old mode
 (via sendmail), 1 is a simple stdout mode and arpwatch will not fork
-into the background. 2 means raw mode, where the fields are separated.
-by a ",". Default is 0.
+into the background. 2 means raw mode, where the fields are separated by 
+a ",". Default is 0.
 .LP
 .B -p
 flag disables promiscuous operation.  ARP broadcasts get through hubs without
